--- a/ann_benchmarks/algorithms/qg_ngt/config.yml
+++ b/ann_benchmarks/algorithms/qg_ngt/config.yml
@@ -17,7 +17,7 @@ float:
               1.0], [1.2, 1.02], [1.5, 1.02], [2.0, 1.02], [3.0, 1.02], [2, 1.04],
             [3, 1.04], [5, 1.04], [8, 1.04]]]
       s20000-e0.1:
-        args: [{edge: 100, indegree: 120, max_edge: 96, outdegree: 64, sample: 20000}]
+        args: [{edge: 100, epsilon: 0.1, indegree: 120, max_edge: 96, outdegree: 64, sample: 20000}]
         query_args: [[[0.0, 0.9], [0.0, 0.95], [0.0, 0.98], [0.0, 1.0], [1.2, 0.9],
             [1.5, 0.9], [2.0, 0.9], [3.0, 0.9], [1.2, 0.95], [1.5, 0.95], [2.0, 0.95],
             [3.0, 0.95], [1.2, 0.98], [1.5, 0.98], [2.0, 0.98], [3.0, 0.98], [1.2,
